Actualiza el estructura.html

--- a/estructura.html
+++ b/estructura.html
@@ -11,7 +11,15 @@
     </header>
     <main>
         <section>
-            
+            <input type="text" id="texto" placeholder="Escribe aquí tu texto">
+            <p>Solo letras minúsculas y sin acentos</p>
+
+            <button id="encriptar">Encriptar</button>
+            <button id="desencriptar">Desencriptar</button>
+        </section>
+        <section>
+            <p>Texto encriptado:</p>
+            <p id="textoEncriptado"></p>
         </section>
     </main>
     <footer>
