Actualiza el estructura.html

--- a/estructura.html
+++ b/estructura.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="" alt="logo">
+    <header class="header">
+        <img src="./img/Logo.png" alt="logo">
     </header>
-    <main>
-        <section>
+    <main class="contenido">
+        <section class="contenido__instruccion">
             <input type="text" id="texto" placeholder="Escribe aquí tu texto">
             <p>Solo letras minúsculas y sin acentos</p>
 
-            <button id="encriptar">Encriptar</button>
-            <button id="desencriptar">Desencriptar</button>
+            <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
+            <button onclick="" class="boton__desencriptar" id="desencriptar">Desencriptar</button>
         </section>
             <p>Texto encriptado:</p>
             <p id="textoEncriptado"></p>
