--- a/estructura.html
+++ b/estructura.html
@@ -12,7 +12,7 @@
     </header>
     <main class="contenido">
         <section class="contenido__instruccion">
-            <input type="text" id="texto" placeholder="Escribe aquí tu texto">
+            <input class="contenido__input" type="text" id="texto" placeholder="Escribe aquí tu texto">
             <p>Solo letras minúsculas y sin acentos</p>
 
             <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
@@ -20,6 +20,7 @@
         </section>
             <p>Texto encriptado:</p>
             <p id="textoEncriptado"></p>
+            <button onclick="" class="boton__copiar" id="copiar">Copiar</button>
     </main>
     <footer>
         
