--- a/estructura.html
+++ b/estructura.html
@@ -15,8 +15,10 @@
             <input class="contenido__input" type="text" id="texto" placeholder="Escribe aquí tu texto">
             <p>Solo letras minúsculas y sin acentos</p>
 
-            <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
-            <button onclick="" class="boton__desencriptar" id="desencriptar">Desencriptar</button>
+            <div>
+                <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
+                <button onclick="" class="boton__desencriptar" id="desencriptar">Desencriptar</button>
+            </div>
         </section>
             <p>Texto encriptado:</p>
             <p id="textoEncriptado"></p>
