actualiza el html

--- a/estructura.html
+++ b/estructura.html
@@ -15,17 +15,18 @@
             <input class="contenido__input" type="text" id="texto" placeholder="Escribe aquí tu texto">
             <p>Solo letras minúsculas y sin acentos</p>
 
-            <div>
+            <div class="contenido__botones">
                 <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
                 <button onclick="" class="boton__desencriptar" id="desencriptar">Desencriptar</button>
             </div>
         </section>
+        <div class="contenido__resultado">
             <p>Texto encriptado:</p>
             <p id="textoEncriptado"></p>
             <button onclick="" class="boton__copiar" id="copiar">Copiar</button>
+        </div>
     </main>
     <footer>
-        
     </footer>
 </body>
 </html>
