Corregir el html

--- a/estructura.html
+++ b/estructura.html
@@ -12,7 +12,7 @@
     </header>
     <main class="contenido">
         <section class="contenido__instruccion">
-            <input class="contenido__input" type="text" id="texto" placeholder="Escribe aquí tu texto">
+            <textarea class="contenido__input" id="texto" placeholder="Escribe aquí tu texto"></textarea>
             <p>Solo letras minúsculas y sin acentos</p>
 
             <div class="contenido__botones">
