cambio en estructura.html

--- a/estructura.html
+++ b/estructura.html
@@ -21,8 +21,10 @@
             </div>
         </section>
         <div class="contenido__resultado">
-            <p>Texto encriptado:</p>
-            <p id="textoEncriptado"></p>
+            <textarea class="contenido__respuesta" id="resultado">
+               No se encontró ningun mensaje
+               Ingresa el texto que desees encriptar o desencriptar
+            </textarea>
         </div>
     </main>
     <footer>
