actualiza el html

--- a/estructura.html
+++ b/estructura.html
@@ -21,10 +21,9 @@
             </div>
         </section>
         <div class="contenido__resultado">
-            <textarea class="contenido__respuesta" id="resultado">
-               No se encontró ningun mensaje
-               Ingresa el texto que desees encriptar o desencriptar
-            </textarea>
+            <img src="./img/image 1.png" alt="resultado">
+            <p>No se encontró ningún mensaje</p><br>
+            <p>Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
     </main>
     <footer>
