Actualiza el estructura.html

--- a/estructura.html
+++ b/estructura.html
@@ -25,6 +25,7 @@
             <p>No se encontró ningún mensaje</p><br>
             <p>Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
+        <script src="app.js"></script>
     </main>
     <footer>
     </footer>
