--- a/estructura.html
+++ b/estructura.html
@@ -20,10 +20,14 @@
                 <button onclick="" class="boton__desencriptar" id="desencriptar">Desencriptar</button>
             </div>
         </section>
-        <div class="contenido__resultado">
-            <img src="./img/image 1.png" alt="resultado">
-            <p>No se encontró ningún mensaje</p><br>
-            <p>Ingresa el texto que desees encriptar o desencriptar</p>
+        <div class="contenido__resultado" id="resultado">
+            <img src="./img/image 1.png" alt="resultado" id="imagen-resultado">
+            <div id="texto-resultado">
+                <p>No se encontró ningún mensaje</p>
+                <p>Ingresa el texto que desees encriptar o desencriptar</p>
+            </div>
+            <textarea id="texto-encriptado" readonly style="display: none;"></textarea>
+            <button id="copiar" style="display: none;">Copiar</button>
         </div>
         <script src="app.js"></script>
     </main>
