actualiza el html + nueva imagen

--- a/estructura.html
+++ b/estructura.html
@@ -13,7 +13,10 @@
     <main class="contenido">
         <section class="contenido__instruccion">
             <textarea class="contenido__input" id="texto" placeholder="Escribe aquí tu texto"></textarea>
-            <p class="contenido__parrafo">Solo letras minúsculas y sin acentos</p>
+            <div>
+                <img src="./img/bi_exclamation-circle-fill.png" alt="instrucciones">
+                <p class="contenido__parrafo">Solo letras minúsculas y sin acentos</p>
+            </div>
 
             <div class="contenido__botones">
                 <button onclick="" class="boton__encriptar" id="encriptar">Encriptar</button>
@@ -23,7 +26,7 @@
         <div class="contenido__resultado" id="resultado">
             <img src="./img/image 1.png" alt="resultado" id="imagen-resultado">
             <div id="texto-resultado">
-                <p class="contenido__resultado__parrafo">No se encontró ningún mensaje</p>
+                <p class="contenido__resultado__parrafo">No se encontró ningún mensaje</p><br>
                 <p class="contenido__resultado__mensaje">Ingresa el texto que desees encriptar o desencriptar</p>
             </div>
             <textarea id="texto-encriptado" readonly style="display: none;"></textarea>
@@ -32,6 +35,8 @@
         <script src="app.js"></script>
     </main>
     <footer>
+        <p>Desarrollado por Alder Somoza</p>
+        <p>12/08/2024</p>
     </footer>
 </body>
 </html>
