actualiza el style.css

--- a/estructura.html
+++ b/estructura.html
@@ -13,7 +13,7 @@
     <main class="contenido">
         <section class="contenido__instruccion">
             <textarea class="contenido__input" id="texto" placeholder="Escribe aquí tu texto"></textarea>
-            <div>
+            <div class="contenido__advertencia">
                 <img src="./img/bi_exclamation-circle-fill.png" alt="instrucciones">
                 <p class="contenido__parrafo">Solo letras minúsculas y sin acentos</p>
             </div>
@@ -34,7 +34,7 @@
         </div>
         <script src="app.js"></script>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Desarrollado por Alder Somoza</p>
         <p>12/08/2024</p>
     </footer>
